# contract_google_test

./: .gitignore  CMakeLists.txt
speedtest/: IR.ll  Makefile  assert  assert.cpp  assert_result.txt  assert_speedcheck.sh  contract  contract.cpp  contractIR.ll  contract_and_manual_contract_compare.sh  contract_result.txt  double_check_manual_contract  double_check_manual_contract.cpp  main.cpp  main_old.cpp  manual_assert  manual_assert.cpp  manual_assert_result.txt  manual_contract  manual_contract.cpp  manual_contractIR.ll  manual_contract_internal  manual_contract_internal.cpp  manual_contract_result.txt  result.csv  speedtest
src/: func.hpp  method.hpp  template.hpp
src/test/: func.cpp  method.cpp  template.cpp  test.cpp
